# microsoft-authentication-library-for-python

./: setup.cfg  setup.py
.github/workflows/: RunIssueSentinel.yml  python-package.yml
msal/: __init__.py  application.py  authority.py  broker.py  cloudshell.py  sku.py  token_cache.py  wam.py
tests/: msaltest.py  test_broker.py  test_e2e.py  test_wam.py
