[bdist_wheel]
universal=1

[metadata]
project_urls =
    Changelog = https://github.com/AzureAD/microsoft-authentication-library-for-python/releases

[options.extras_require]
# The broker is defined as optional dependency, so that downstream apps can opt in.
# The opt-in is needed because historically most MSAL Python apps do not have the redirect_uri needed by broker
broker =
  pymsalruntime>=0.3,<2;python_version>='3' and platform_system=='Windows'
